--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ jQuery(function(){
 <div class="content">
 	<h1>HTML/CSS&mdash;markup</h1>
 		<p>Hi,
-		I'm KATERINA NEREVENIKA, from Kharkiv, Ukraine. <br />I am the HTML/CSS Developer.</p>
+		I'm Kateryna Nerevenka, from Kharkiv, Ukraine. <br />I am the HTML/CSS Developer.</p>
 			<p>
 	E-mail: <a href="mailto:nerevenka@protonmail.com">nerevenka@protonmail.com</a>
 	</p>
